# Oberon

./: .gitignore  CONTRIBUTING.md  LICENSE.md  README.md  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: ci.yml  docs.yml  main.yml  security.yml
config/: development.json
deployment/templates/: standard_config.yaml
docs/: Makefile  conf.py  generate_api_docs.py  index.rst  installation.rst  quickstart.rst
docs/guides/: quickstart.md
scripts/: build_docs.sh
src/core/: __init__.py  component.py  configuration.py  exceptions.py  logging.py  registry.py
src/messaging/: neural_bridge.py
src/neuromorphic/airframe/: advanced_stealth_model.py  blended_wing_model.py  canard_delta_model.py  cfd_integration.py  flying_wing_model.py  high_altitude_model.py  hypersonic_model.py  hypersonic_stealth_model.py  joint_wing_model.py  lifting_body_model.py  micro_uav_model.py  modular_airframe_model.py  morphing_wing_model.py  parametric_model.py  stealth_model.py  structural_analysis.py  tailless_delta_model.py  vtol_model.py
src/neuromorphic/api/: payload_interface.py  payload_power_manager.py
src/neuromorphic/communication/: secure_channel.py
src/neuromorphic/config/: config_manager.py  hardware_config.py
src/neuromorphic/control/: attractor_controller.py  bacterial_controller.py  bayesian_controller.py  cerebellar_controller.py  cpg_controller.py  hebbian_controller.py  hippocampal_controller.py  (+13 more)
src/ucav/: component_model.py
tests/: conftest.py
tests/integration/: test_core_integration.py
updates/: updates.json
(+91 files in other folders)
